--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Installation:
 
-  git clone git@github.com:dhruvasagar/My-VIM-Setup.git ~/.vim
+  git clone git://github.com/dhruvasagar/dotvim.git ~/.vim
 
 Create symlinks:
 
